--- a/index.html
+++ b/index.html
@@ -11,13 +11,63 @@
 </head>
 <body>
 
-    <div class="container-fulid">
+    <div class="container ">
 
-        <div class=" col-12 lib-container">
-            <div class="lib-heading">
+        <div class=" col-12 lib-container  ">
+            <div class="lib-heading ">
                 <h1 class="heading">Library-Management System</h1>
 
             </div>
+<!-- section to add books -->
+            <div class="input-container d-flex justify-content-center ">
+                <label for="" >Book Name</label> &nbsp; &nbsp;<br> 
+                <input type="text" placeholder="Enter a Book Name" id="bookTitle">
+
+            </div>
+            <br> 
+
+            <div class="input-container d-flex justify-content-center">
+                <label for="">Author Name </label> &nbsp;<br>
+                <input type="text" placeholder="Enter Author Name" id="bookAuthor">
+
+            </div> <br>
+
+         <div class=" d-flex justify-content-center">
+            <button class="btn btn-primary mx-3" id="addBookBtn" >Add</button> 
+            
+            <button class="btn btn-primary">Remove</button>
+        </div> 
+
+        <div class="available-book ">
+
+            <h3>Available Book in Library </h3>
+            <hr >
+            <ul id="libraryBooks"></ul>
+        </div>
+
+
+
+        <!-- section for student action -->
+
+        <div class="student-section">
+            <h3>Student Actions</h3>
+            <hr>
+
+         <div class="bookTitle">
+            <label for="">Book Name to Borrow</label>
+            <input type="text" name="" id=""> <br> <br>
+
+            <button class="btn btn-success">Borrow Book</button>
+        </div>
+<br>
+        <div class="bookTitle">
+            <label for="">Book Name to Return</label>
+            <input type="text" name="" id=""> <br> <br>
+
+            <button class="btn btn-success">Return Book</button>
+        </div>
+
+        </div>
 
         </div>
     </div>
