--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
          <div class=" d-flex justify-content-center">
             <button class="btn btn-primary mx-3" id="addBookBtn" >Add</button> 
             
-            <button class="btn btn-primary">Remove</button>
+            <button class="btn btn-primary" id="removeBookBtn">Remove</button>
         </div> 
 
         <div class="available-book ">
