--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
 
          <div class="bookTitle">
             <label for="">Book Name to Borrow</label>
-            <input type="text" name="" id=""> <br> <br>
+            <input type="text" name="" id="borrowBookTitle"> <br> <br>
 
-            <button class="btn btn-success">Borrow Book</button>
+            <button class="btn btn-success" id="borrowBookBtn">Borrow Book</button>
+            <ul id="borrowedBooks"></ul>
         </div>
 <br>
         <div class="bookTitle">
             <label for="">Book Name to Return</label>
-            <input type="text" name="" id=""> <br> <br>
+            <input type="text" name="" id="returnBookTitle"> <br> <br>
 
-            <button class="btn btn-success">Return Book</button>
+            <button class="btn btn-success" id="returnBookBtn">Return Book</button>
         </div>
 
         </div>
