Background color and style changed in available book div

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
             <h3>Available Book in Library </h3>
             <hr >
+            <div class="libOuput">
             <ul id="libraryBooks"></ul>
+        </div>
         </div>
 
 
